Restore training epochs

--- a/cfgs/refcoco/base_gt_boxes_4x16G.yaml
+++ b/cfgs/refcoco/base_gt_boxes_4x16G.yaml
@@ -94,7 +94,7 @@ TRAIN:
   RESUME: false
   AUTO_RESUME: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 1  # 20
+  END_EPOCH: 20
   OPTIMIZER: 'AdamW'
   CLIP_GRAD_NORM: 1.0
   GRAD_ACCUMULATE_STEPS: 2
